ui2: Fix warning causing scrollbars

--- a/src/common/ui2/views/mainView.css
+++ b/src/common/ui2/views/mainView.css
@@ -1,6 +1,6 @@
 .main-view {
     background-color: var(--bg-dark);
-    height: calc(100% - 40px);
+    height: 100%;
     display: grid;
     grid-template-rows: auto auto 1fr;
     grid-template-columns: auto 1fr auto;
